# rules_venv

./: .bazelrc  MODULE.bazel  print.html  rules.html  searchindex.js  searchindex.json
.bcr/: metadata.template.json  source.template.json
.github/workflows/: ci.yaml
docs/: BUILD.bazel
docs/src/: SUMMARY.md  index.md
python/black/private/: BUILD.bazel  black_fixer.py
python/isort/private/: BUILD.bazel  isort_fixer.py  isort_runner.py
python/private/: BUILD.bazel  target_query.py
python/pylint/private/: pylint.bzl
python/pytest/: BUILD.bazel  repositories_transitive_2.bzl  repositories_transitive_3.bzl
python/pytest/private/: pytest.bzl
python/pytest/private/tests/: pytest_process_wrapper_test.py
python/pytest/private/tests/with_args/: BUILD.bazel
python/pytest/toolchain/: BUILD.bazel
python/ruff/private/: BUILD.bazel  ruff_fixer.py
python/wheel/: defs.bzl
python/wheel/private/: requires_parser.py  twine_process_wrapper.py  wheel.bzl
python/wheel/private/tests/: BUILD.bazel  example.py
